# Finioneer

./: .gitignore  README.md  pyproject.toml  railway.json  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml  daily_collect.yml
configs/: .env.example  settings.py
docs/: model_performance.md  study_roadmap.md
notebooks/02_modeling/: cpi_arima_baseline.ipynb
scripts/: collect_data.py  startup.sh
src/api/: main.py
src/collectors/: fred.py  market.py  news.py
src/dashboard/: app.py
src/models/: arima.py  ensemble.py  fomc_clf.py  xgboost_cpi.py
src/nlp/: finbert.py  fomc_parser.py
src/utils/: db.py  logger.py  scheduler.py
tests/unit/: test_arima.py
